docs/2023.1/_sources/constraintsmanual.rst.txt
.. :tocdepth: 3

.. _constraints:

Constraints Manual
==================================

SmartHLS accepts user-provided constraints that impact the automatically generated
hardware.  These constraints can be specified using the SmartHLS IDE and are 
stored in the Tcl configuration file ``config.tcl`` in your project directory.
This reference section explains the constraints available for SmartHLS.

The main constraints available from the SmartHLS IDE are:

 * Set target clock period: :ref:`CLOCK_PERIOD`
 * Print the HDL output to a single output file: :ref:`SINGLE_HDL_OUTPUT_FILE`
 * Set custom config file: :ref:`set_custom_config_file`
 * Set test bench file: :ref:`set_custom_test_bench_file`
 * Set test bench module: :ref:`set_custom_test_bench_module`
 * Set operation latency: :ref:`set_operation_latency`
 * Set FPGA family and device: :ref:`set_project`
 * Set resource constraint: :ref:`set_resource_constraint`
 * Set FPGA synthesis top-level module: :ref:`set_synthesis_top_module`
 * Set FPGA synthesis top-level file: :ref:`set_synthesis_top_module_file`

.. * Pipeline loop: :ref:`loop_pipeline`  
 * Pipeline function: :ref:`function_pipeline`
 * Inline function: :ref:`inline_function`
 * Do not inline function: :ref:`noinline_function`
 * Flatten function: :ref:`flatten_function`
 * Minimize bitwidth: :ref:`MB_MINIMIZE_HW`
 * Replicate ROM to each accessing module: :ref:`REPLICATE_ROMS`
 * Use generic memory initialization file: :ref:`USE_MEM_FILE`

A few debugging constraints are available from the SmartHLS IDE:

 * Stalling input/output FIFOs in CoSimulation: :ref:`COSIM_FIFO_STALL_PROB`
 * Keep signals with no fanout: :ref:`KEEP_SIGNALS_WITH_NO_FANOUT`
 * Insert simulation assertions (for debugging): :ref:`VSIM_ASSERT`

.. * Choose divider type: :ref:`DIVIDER_MODULE`
   * Choose multiplier type: :ref:`MULTIPLIER_MODULE`
   * Pipeline all loops: :ref:`PIPELINE_ALL`
   * Print cycle count for each function: :ref:`PRINTF_CYCLES`
   if-conversion is now enabled by default whenever this is any loop/function pipeline
   * Unroll all loops: :ref:`UNROLL`

.. .. NOTE::
        Advanced users can read the defaults for each Tcl constraint in 
        ``examples/legup.tcl``.  These defaults are read before being overridden
        by the project ``config.tcl`` file. 



Commonly Used Constraints
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. include:: constraint_docs/CLOCK_PERIOD.inc
.. include:: constraint_docs/SINGLE_HDL_OUTPUT_FILE.inc
.. include:: constraint_docs/set_custom_config_file.inc
.. include:: constraint_docs/set_custom_test_bench_file.inc
.. include:: constraint_docs/set_custom_test_bench_module.inc
.. include:: constraint_docs/set_operation_latency.inc
.. include:: constraint_docs/set_project.inc
.. include:: constraint_docs/set_resource_constraint.inc
.. include:: constraint_docs/set_synthesis_top_module.inc
.. include:: constraint_docs/set_synthesis_top_module_file.inc

.. .. include:: constraint_docs/ENABLE_OPENMP.inc
.. .. include:: constraint_docs/loop_pipeline.inc
.. .. include:: constraint_docs/function_pipeline.inc
.. .. include:: constraint_docs/set_top_level_argument_num_elements.inc
.. .. include:: constraint_docs/inline_function.inc
.. .. include:: constraint_docs/noinline_function.inc
.. .. include:: constraint_docs/flatten_function.inc
.. .. include:: constraint_docs/MB_MINIMIZE_HW.inc
.. .. include:: constraint_docs/REPLICATE_ROMS.inc

Debugging Constraints
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
.. include:: constraint_docs/COSIM_FIFO_STALL_PROB.inc
.. include:: constraint_docs/KEEP_SIGNALS_WITH_NO_FANOUT.inc
.. include:: constraint_docs/VSIM_ASSERT.inc


Advanced Constraints
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

These are not available from the SmartHLS GUI.

.. .. include:: constraint_docs/ADAPTIVE_LATENCY_BINDING.inc
.. include:: constraint_docs/IFCONV_PREDICATE_LOADS.inc
.. include:: constraint_docs/LATENCY_REDUCTION.inc
.. include:: constraint_docs/ENABLE_AUTOMATIC_MEMORY_LATENCY_SETTING.inc
.. include:: constraint_docs/ENABLE_AUTOMATIC_MULTIPLY_MODE_SETTING.inc
.. include:: constraint_docs/MULTIPLY_SPLITTING_FULLY_PIPELINED.inc
.. include:: constraint_docs/SOC_AXI_INITIATOR.inc
.. include:: constraint_docs/SOC_AXI_TARGET.inc
.. include:: constraint_docs/SOC_BD_NAME.inc
.. include:: constraint_docs/SOC_CLOCK.inc
.. include:: constraint_docs/SOC_CPU_MEM_BASE_ADDRESS.inc
.. include:: constraint_docs/SOC_CPU_MEM_SIZE.inc
.. include:: constraint_docs/SOC_DMA_ENGINE.inc
.. include:: constraint_docs/SOC_FABRIC_BASE_ADDRESS.inc
.. include:: constraint_docs/SOC_FABRIC_SIZE.inc
.. include:: constraint_docs/SOC_POLL_DELAY.inc
.. include:: constraint_docs/SOC_PROFILER_COUNTER.inc
.. include:: constraint_docs/SOC_RESET.inc
.. include:: constraint_docs/STRENGTH_REDUCTION.inc
.. include:: constraint_docs/STRENGTH_REDUCTION_ADDERS_ALLOWED_PER_MULTIPLIER.inc
.. include:: constraint_docs/SYNTHESIS_CLOCK_PERIOD.inc
.. include:: constraint_docs/USE_FIFO_FOR_PIPELINE_REG.inc
.. include:: constraint_docs/COSIM_FREE_RUNNING_DATAFLOW_TOP.inc
.. .. include:: constraint_docs/CASE_FSM.inc
.. .. include:: constraint_docs/GROUP_RAMS.inc
.. .. include:: constraint_docs/GROUP_RAMS_SIMPLE_OFFSET.inc
.. .. include:: constraint_docs/LOCAL_RAMS.inc
.. .. include:: constraint_docs/MULTIPLIER_MODULE.inc
.. .. include:: constraint_docs/NO_INLINE.inc
.. .. include:: constraint_docs/NO_OPT.inc
.. .. include:: constraint_docs/UNROLL.inc
.. .. include:: constraint_docs/SET_ACCELERATOR_FUNCTION.inc
.. .. include:: constraint_docs/set_argument_interface_type.inc
.. .. include:: constraint_docs/set_project.inc
.. .. include:: constraint_docs/USE_MEM_FILE.inc
.. .. include:: constraint_docs/partition_top_level_argument.inc

.. Comment out advanced constraints:
  Other Advanced Constraints
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  
  These are not available from the GUI.
  
  .. include:: constraint_docs/CASEX.inc
  .. include:: constraint_docs/DEBUG_DB_HOST.inc
  .. include:: constraint_docs/DEBUG_DB_NAME.inc
  .. include:: constraint_docs/DEBUG_DB_PASSWORD.inc
  .. include:: constraint_docs/DEBUG_DB_SCRIPT_FILE.inc
  .. include:: constraint_docs/DEBUG_DB_USER.inc
  .. include:: constraint_docs/DEBUG_SDC_CONSTRAINTS.inc
  .. include:: constraint_docs/DFG_SHOW_DUMMY_CALLS.inc
  .. include:: constraint_docs/DISABLE_REG_SHARING.inc
  .. include:: constraint_docs/DONT_CHAIN_GET_ELEM_PTR.inc
  .. include:: constraint_docs/DUAL_PORT_BINDING.inc
  .. include:: constraint_docs/ENABLE_PATTERN_SHARING.inc
  .. include:: constraint_docs/EXPLICIT_LPM_MULTS.inc
  .. include:: constraint_docs/FREQ_THRESHOLD.inc
  .. include:: constraint_docs/INCLUDE_INST_IN_FSM_DOT_GRAPH.inc
  .. include:: constraint_docs/INCREMENTAL_SDC.inc
  .. include:: constraint_docs/INFERRED_RAMS.inc
  .. include:: constraint_docs/INSPECT_DEBUG.inc
  .. include:: constraint_docs/INSPECT_DEBUG_DB_NAME.inc
  .. include:: constraint_docs/INSPECT_DEBUG_DB_SCRIPT_FILE.inc
  .. include:: constraint_docs/INSPECT_ONCHIP_BUG_DETECT_DEBUG.inc
  .. include:: constraint_docs/LLVM_PROFILE.inc
  .. include:: constraint_docs/MB_MAX_BACK_PASSES.inc
  .. include:: constraint_docs/MB_PRINT_STATS.inc
  .. include:: constraint_docs/MB_RANGE_FILE.inc
  .. include:: constraint_docs/MODULO_DEBUG.inc
  .. include:: constraint_docs/MODULO_SCHEDULER.inc
  .. include:: constraint_docs/MULTIPLIER_NO_CHAIN.inc
  .. include:: constraint_docs/MULTIPUMPING.inc
  .. include:: constraint_docs/MULTI_CYCLE_ADD_THROUGH_CONSTRAINTS.inc
  .. include:: constraint_docs/MULTI_CYCLE_DEBUG.inc
  .. include:: constraint_docs/MULTI_CYCLE_DISABLE_REG_MERGING.inc
  .. include:: constraint_docs/MULTI_CYCLE_DUPLICATE_LOAD_REG.inc
  .. include:: constraint_docs/MULTI_CYCLE_REMOVE_CMP_REG.inc
  .. include:: constraint_docs/MULTI_CYCLE_REMOVE_REG.inc
  .. include:: constraint_docs/MULTI_CYCLE_REMOVE_REG_DIVIDERS.inc
  .. include:: constraint_docs/MULT_BY_CONST_INFER_DSP.inc
  .. include:: constraint_docs/NO_DFG_DOT_FILES.inc
  .. include:: constraint_docs/NO_LOOP_PIPELINING.inc
  .. include:: constraint_docs/NO_ROMS.inc
  .. include:: constraint_docs/PATTERN_SHARE_ADD.inc
  .. include:: constraint_docs/PATTERN_SHARE_BITOPS.inc
  .. include:: constraint_docs/PATTERN_SHARE_SHIFT.inc
  .. include:: constraint_docs/PATTERN_SHARE_SUB.inc
  .. include:: constraint_docs/PIPELINE_ALL.inc
  .. include:: constraint_docs/PIPELINE_RESOURCE_SHARING.inc
  .. include:: constraint_docs/PIPELINE_SAVE_REG.inc
  .. include:: constraint_docs/PRINTF_CYCLES.inc
  .. include:: constraint_docs/PRINT_BB_STATS.inc
  .. include:: constraint_docs/PRINT_FUNCTION_START_FINISH.inc
  .. include:: constraint_docs/PRINT_STATES.inc
  .. include:: constraint_docs/PS_BIT_DIFF_THRESHOLD.inc
  .. include:: constraint_docs/PS_MAX_SIZE.inc
  .. include:: constraint_docs/PS_MIN_SIZE.inc
  .. include:: constraint_docs/PS_MIN_WIDTH.inc
  .. include:: constraint_docs/RESTRICT_TO_MAXDSP.inc
  .. include:: constraint_docs/SDC_BACKTRACKING_PRIORITY.inc
  .. include:: constraint_docs/SDC_MULTIPUMP.inc
  .. include:: constraint_docs/SDC_NO_CHAINING.inc
  .. include:: constraint_docs/SDC_ONLY_CHAIN_CRITICAL.inc
  .. include:: constraint_docs/SDC_PRIORITY.inc
  .. include:: constraint_docs/SYSTEM_BARRIER_BASE_ADDRESS.inc
  .. include:: constraint_docs/SYSTEM_CLOCK_INTERFACE.inc
  .. include:: constraint_docs/SYSTEM_CLOCK_MODULE.inc
  .. include:: constraint_docs/SYSTEM_DATA_CACHE_TYPE.inc
  .. include:: constraint_docs/SYSTEM_MEMORY_BASE_ADDRESS.inc
  .. include:: constraint_docs/SYSTEM_MEMORY_INTERFACE.inc
  .. include:: constraint_docs/SYSTEM_MEMORY_MODULE.inc
  .. include:: constraint_docs/SYSTEM_MEMORY_SIM_INIT_FILE_NAME.inc
  .. include:: constraint_docs/SYSTEM_MEMORY_SIM_INIT_FILE_TYPE.inc
  .. include:: constraint_docs/SYSTEM_MEMORY_SIZE.inc
  .. include:: constraint_docs/SYSTEM_MEMORY_WIDTH.inc
  .. include:: constraint_docs/SYSTEM_MUTEX_BASE_ADDRESS.inc
  .. include:: constraint_docs/SYSTEM_PROCESSOR_ARCHITECTURE.inc
  .. include:: constraint_docs/SYSTEM_PROCESSOR_DATA_MASTER.inc
  .. include:: constraint_docs/SYSTEM_PROCESSOR_NAME.inc
  .. include:: constraint_docs/SYSTEM_PROJECT_NAME.inc
  .. include:: constraint_docs/SYSTEM_RESET_INTERFACE.inc
  .. include:: constraint_docs/SYSTEM_RESET_MODULE.inc
  .. include:: constraint_docs/TEST_WAITREQUEST.inc
  .. include:: constraint_docs/TIMING_NO_IGNORE_GETELEMENTPTR_AND_STORE.inc
  .. include:: constraint_docs/TIMING_NUM_PATHS.inc
  .. include:: constraint_docs/debugger_capture_mode.inc
  .. include:: constraint_docs/set_custom_rtl_file.inc
  .. include:: constraint_docs/set_custom_rtl_function.inc
  .. include:: constraint_docs/set_device_specs.inc
  .. include:: constraint_docs/set_smarthls_config_board.inc
  .. include:: constraint_docs/set_smarthls_output_path.inc
  .. include:: constraint_docs/set_operation_attributes.inc
  .. include:: constraint_docs/set_operation_sharing.inc
  .. include:: constraint_docs/use_debugger.inc
